# gcp-finops-agent

./: .env.example  .gitignore  .gitlab-ci.yml.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.txt  deploy.yml.txt
deploy/: .gitlab-ci-agent-engine.yml  README.md  agent_engine_deploy.py  cleanup_old_engines.py  setup-a2a-permissions.sh  setup-staging-bucket.sh
docs/: A2A_SETUP.md  GETTING_STARTED.md  PERMISSIONS.md  THREAT_MODEL.md
examples/: a2a_executor_example.py  test_a2a_connection.py
gcp_finops_agent/: __init__.py  a2a_executor.py  agent.py  config.py  gcp.py  gcs.py  models.py  prompts.py  requirements.txt  sanitize.py  tools.py  utils.py
tests/: __init__.py  test_agent.py  test_config.py  test_gcp.py  test_recommendations.py  test_sanitize.py
tests/evals/: README.md  assertions.py  conftest.py
tests/evals/fixtures/: __init__.py  tool_responses.py
tests/evals/scenarios/: __init__.py  test_ambiguity_handling.py  test_date_interpretation.py  test_followups.py  test_format_compliance.py  test_injection_resilience.py  test_onboarding.py  test_tool_selection.py  test_unknown_resource_flow.py
