[project]
name = "gcp-finops-agent"
version = "0.1.0"
description = "GCP FinOps agent powered by Google ADK and Vertex AI"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.76.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-monitoring>=2.21.0",
    "google-cloud-recommender>=2.16.0",
    "google-cloud-storage>=2.18.0",
    "pandas>=2.2.0",
    "db-dtypes>=1.3.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "google-cloud-secret-manager>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gcp_finops_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: end-to-end agent evals (slow, hits Vertex AI)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
